Design tweaks regarding spacing, bug fixing (tortured borders) and adjusting carousel height (feeled a bit empty on full viewport height)

--- a/content/index.html
+++ b/content/index.html
@@ -7,7 +7,7 @@ nextPage:
     url: /visie
 ---
 
-<div class="tortured-border-top"></div>
+<div class="tortured-border tortured-border--top tortured-border--to-front"></div>
 <main class="cz-p-y">
     <section class="cz-section cz-m-t-3">
         <div class="container">
@@ -17,7 +17,7 @@ nextPage:
                 </div>
 
                 <div class="media-block__content">
-                    <h2>Onze visie</h2>
+                    <h2 class="cz-no-m-b">Onze visie</h2>
                     <hr class="cz-divider" />
                     <p class="cz-text">
                         De focus van software-ontwikkeling verlegt zich meer naar front end development van geavanceerde, interactieve, en gebruiksvriendelijke (web)applicaties. Back end blijft belangrijk.
@@ -33,7 +33,7 @@ nextPage:
         <div class="container">
             <div class="media-block">
                 <div class="media-block__content">
-                    <h2>Met onze klanten</h2>
+                    <h2 class="cz-no-m-b">Met onze klanten</h2>
                     <hr class="cz-divider"></hr>
                     <p class="cz-text">
                         Wij bouwen samen met onze klanten complexe (mobiele) webapplicaties op maat met optimale gebruikersvriendelijkheid. We helpen processen van onze klanten te verbeteren, interactie met haar stakeholders eenvoudig en intuïtief te laten verlopen en/of informatie adequaat te verwerken.
@@ -55,7 +55,7 @@ nextPage:
                     <img class="media-block__image" src="/images/monsters/romemonster.svg" width="200px" height="200px"/>
                 </div>
                 <div class="media-block__content">
-                    <h2>Als professionals</h2>
+                    <h2 class="cz-no-m-b">Als professionals</h2>
                     <hr class="cz-divider" />
                     <p class="cz-text">
                         De professionals van CODEZILLA zorgen voor gestructureerd geschreven (front end) software, opdat in de toekomst andere professionals snel en adequaat kunnen verder ontwikkelen van deze software.
@@ -67,4 +67,4 @@ nextPage:
         </div>
     </section>
 </main>
-<div class="tortured-border-bottom"></div>
+<div class="tortured-border tortured-border--bottom tortured-border--to-front"></div>
