--- a/content/team.html
+++ b/content/team.html
@@ -12,7 +12,7 @@ nextPage:
     url: /
 ---
 
-<div class="tortured-border-top"></div>
+<div class="tortured-border tortured-border--top"></div>
 <main>
 <div class="cz-split-panels">
     <div class="cz-section">
@@ -215,4 +215,4 @@ nextPage:
     {{/team-member-overlay}}
 </div>
 </main>
-<div class="tortured-border-bottom"></div>
+<div class="tortured-border tortured-border--bottom"></div>
