--- a/content/visie.html
+++ b/content/visie.html
@@ -12,7 +12,7 @@ nextPage:
     url: /werken-bij
 ---
 
-<div class="tortured-border-top"></div>
+<div class="tortured-border tortured-border--top"></div>
 <main class="cz-p-y">
     <section class="cz-section  cz-m-t-3">
         <div class="container">
@@ -22,7 +22,7 @@ nextPage:
                 </div>
 
                 <div class="media-block__content">
-                    <h2>Doel</h2>
+                    <h2 class="cz-no-m-b">Doel</h2>
                     <hr class="cz-divider" />
                     <p class="cz-text">
                         CODEZILLA streeft langdurende en vruchtbare relaties met klanten en potentiële klanten na, waarin klanttevredenheid een vanzelfsprekendheid is er evenwichtige belangenbehartiging plaats vindt. Wij willen bijdragen aan het succes van onze klanten door middel van adequate front end coding en software development.
@@ -37,7 +37,7 @@ nextPage:
         <div class="container">
             <div class="media-block">
                 <div class="media-block__content">
-                    <h2>Expertises</h2>
+                    <h2 class="cz-no-m-b">Expertises</h2>
                     <hr class="cz-divider" />
                     <p class="cz-text">
                         Het is onze ambitie om bovenop (en voorop) de techniek van front end development en coding te zitten. Er zijn veel ontwikkelingen op het vakgebied en we zien dat als een voorrecht en uitdaging. Wij maken een weloverwogen keuze tussen techniek, oplossing en implementatie en zijn daarin pragmatisch.
@@ -57,7 +57,7 @@ nextPage:
                     {{> diamond-icon svg="/images/fist.svg" inlineStyle="width: 50px; margin-left:-25px; margin-top: -25px" }}
                 </div>
                 <div class="media-block__content">
-                    <h2>Team</h2>
+                    <h2 class="cz-no-m-b">Team</h2>
                     <hr class="cz-divider" />
                     <p class="cz-text">
                         We willen optimaal gebruik maken van het aanwezige netwerk van collega-bedrijven, partners, intermediairs en vooral onze professionals. Hierbij presenteren wij ons CODEZILLA team in de vorm van avatars. We willen ‘monsterlijk’ goed zijn in datgene wat we doen.
@@ -67,4 +67,4 @@ nextPage:
         </div>
     </section>
 </main>
-<div class="tortured-border-bottom"></div>
+<div class="tortured-border tortured-border--bottom tortured-border--to-front"></div>
