--- a/content/werken-bij.html
+++ b/content/werken-bij.html
@@ -12,7 +12,7 @@ nextPage:
     url: /team
 ---
 
-<div class="tortured-border-top"></div>
+<div class="tortured-border tortured-border--top"></div>
 <main class="cz-p-y">
 <section class="cz-section  cz-m-t-3">
     <div class="container">
@@ -22,7 +22,7 @@ nextPage:
             </div>
 
             <div class="media-block__content">
-                <h2>Passie</h2>
+                <h2 class="cz-no-m-b">Passie</h2>
                 <hr class="cz-divider" />
                 <p class="cz-text">
                     We willen gepassioneerde, goed communicerende, front end professionals aan ons binden en boeien. We creëren een overzichtelijke, persoonlijke, flexibele organisatie met een pragmatische instelling. We stimuleren actieve interactie tussen onze vakmensen en partners, vakgenoten en klanten.
@@ -36,7 +36,7 @@ nextPage:
     <div class="container">
         <div class="media-block">
             <div class="media-block__content">
-                <h2>Aantrekkingskracht</h2>
+                <h2 class="cz-no-m-b">Aantrekkingskracht</h2>
                 <hr class="cz-divider"></hr>
                 <p class="cz-text">
                     We willen energieke jonge mensen aantrekken, die ambitieus zijn om samen met het team successen te behalen. Onze extra toegevoegde waarde; versnellen van persoonlijke ontwikkeling door elkaar te willen verbeteren (constructief, kennisdeling).
@@ -49,5 +49,5 @@ nextPage:
     </div>
 </section>
 </main>
-<div class="tortured-border-bottom"></div>
+<div class="tortured-border tortured-border--bottom tortured-border--to-front"></div>
 
