Text changes Martin

--- a/content/index.html
+++ b/content/index.html
@@ -20,7 +20,7 @@ nextPage:
                     <h2 class="cz-no-m-b">Onze visie</h2>
                     <hr class="cz-divider" />
                     <p class="cz-text">
-                        De focus van software-ontwikkeling verlegt zich meer naar front end development van geavanceerde, interactieve, en gebruiksvriendelijke (web)applicaties. Back end blijft belangrijk.
+                        De richting van software-ontwikkeling verlegt zich meer naar front end development van geavanceerde, interactieve, en gebruiksvriendelijke (web)applicaties. Back end blijft belangrijk.
                         <br/>
                         <a href="/visie">Lees meer over onze visie</a>
                     </p>
