--- a/content/werken-bij.html
+++ b/content/werken-bij.html
@@ -5,7 +5,7 @@ layout: layout.html
 header:
     image: /images/collage-codezilla-1.jpg
     title: Werken bij
-    slogan: Wij zijn op zoek naar gepassioneerde front-end developers.
+    slogan: Wij zijn op zoek naar gepassioneerde front end developers.
 
 nextPage:
     title: team
@@ -25,7 +25,7 @@ nextPage:
                 <h2 class="cz-no-m-b">Passie</h2>
                 <hr class="cz-divider" />
                 <p class="cz-text">
-                    We willen gepassioneerde, goed communicerende, front end professionals aan ons binden en boeien. We creëren een overzichtelijke, persoonlijke, flexibele organisatie met een pragmatische instelling. We stimuleren actieve interactie tussen onze vakmensen en partners, vakgenoten en klanten.
+                    We willen gepassioneerde, goed communicerende, front end professionals aan ons binden en boeien. We creëren een overzichtelijke, persoonlijke, flexibele organisatie met een nuchtere instelling. We stimuleren actieve interactie tussen onze vakmensen en partners, vakgenoten en klanten.
                 </p>
             </div>
         </div>
@@ -39,7 +39,7 @@ nextPage:
                 <h2 class="cz-no-m-b">Aantrekkingskracht</h2>
                 <hr class="cz-divider"></hr>
                 <p class="cz-text">
-                    We willen energieke jonge mensen aantrekken, die ambitieus zijn om samen met het team successen te behalen. Onze extra toegevoegde waarde; versnellen van persoonlijke ontwikkeling door elkaar te willen verbeteren (constructief, kennisdeling).
+                    We willen energieke mensen aantrekken, die ambitieus zijn om samen met het team successen te behalen. Onze extra toegevoegde waarde; versnellen van persoonlijke ontwikkeling door elkaar te willen verbeteren (constructief, kennisdeling).
                 </p>
             </div>
             <div class="media-block__image-wrapper">
