--- a/content/visie.html
+++ b/content/visie.html
@@ -25,7 +25,7 @@ nextPage:
                     <h2 class="cz-no-m-b">Doel</h2>
                     <hr class="cz-divider" />
                     <p class="cz-text">
-                        CODEZILLA streeft langdurende en vruchtbare relaties met klanten en potentiële klanten na, waarin klanttevredenheid een vanzelfsprekendheid is er evenwichtige belangenbehartiging plaats vindt. Wij willen bijdragen aan het succes van onze klanten door middel van adequate front end coding en software development.
+                        CODEZILLA streeft langdurende en vruchtbare relaties met klanten en potentiële klanten na, waarin klanttevredenheid een vanzelfsprekendheid is een waarin evenwichtige belangenbehartiging plaats vindt. Wij willen bijdragen aan het succes van onze klanten door middel van adequate front end coding en software development.
                     </p>
                 </div>
             </div>
@@ -40,7 +40,7 @@ nextPage:
                     <h2 class="cz-no-m-b">Expertises</h2>
                     <hr class="cz-divider" />
                     <p class="cz-text">
-                        Het is onze ambitie om bovenop (en voorop) de techniek van front end development en coding te zitten. Er zijn veel ontwikkelingen op het vakgebied en we zien dat als een voorrecht en uitdaging. Wij maken een weloverwogen keuze tussen techniek, oplossing en implementatie en zijn daarin pragmatisch.
+                        Het is onze ambitie om bovenop (en voorop) de techniek van front end development en coding te zitten. Er zijn veel ontwikkelingen op dit vakgebied en we zien dat als een voorrecht en uitdaging. Wij maken weloverwogen keuzes tussen techniek, oplossing en implementatie en zijn daarin pragmatisch.
                     </p>
                 </div>
                 <div class="media-block__image-wrapper">
