--- a/content/werken-bij.html
+++ b/content/werken-bij.html
@@ -18,7 +18,7 @@ nextPage:
     <div class="container">
         <div class="media-block">
             <div class="media-block__image-wrapper">
-                {{> team-member name="jouw-avatar" displayName="Jij hier?" svg="/images/monsters/anonymousmonster.svg" svgStyle="transform: scale(0.5) translateY(-120px)" }}
+                {{> team-member name="jouw-avatar" clickable=false displayName="Jij hier?" svg="/images/monsters/anonymousmonster.svg" svgStyle="transform: scale(0.5) translateY(-120px)" }}
             </div>
 
             <div class="media-block__content">
