Added image alts

--- a/content/index.html
+++ b/content/index.html
@@ -15,7 +15,7 @@ nextPage:
         <div class="container">
             <div class="media-block">
                 <div class="media-block__image-wrapper">
-                    <img class="media-block__image" src="/images/monsters/nicomonster.svg" width="200px" height="200px"/>
+                    <img class="media-block__image" src="/images/monsters/nicomonster.svg" alt="" width="200px" height="200px"/>
                 </div>
 
                 <div class="media-block__content">
@@ -44,7 +44,7 @@ nextPage:
                     </p>
                 </div>
                 <div class="media-block__image-wrapper">
-                    <img class="media-block__image" src="/images/monsters/patrickmonster.svg" width="200px" height="200px"/>
+                    <img class="media-block__image" src="/images/monsters/patrickmonster.svg" alt="" width="200px" height="200px"/>
                 </div>
             </div>
         </div>
@@ -54,7 +54,7 @@ nextPage:
         <div class="container">
             <div class="media-block">
                 <div class="media-block__image-wrapper media-block__image-wrapper--persist-mobile">
-                    <img class="media-block__image" src="/images/monsters/romemonster.svg" width="200px" height="200px"/>
+                    <img class="media-block__image" src="/images/monsters/romemonster.svg" alt="" width="200px" height="200px"/>
                 </div>
                 <div class="media-block__content">
                     <h2 class="cz-no-m-b">Als professionals</h2>
@@ -96,7 +96,7 @@ nextPage:
                             <p class="cz-text">{{ text }}</p>
                         </div>
                         <div class="media-block__image-wrapper media-block__image-wrapper--persist-mobile">
-                            <img class="media-block__image" src="{{ logo }}" width="200px" height="200px" />
+                            <img class="media-block__image" src="{{ logo }}" alt="{{ name }}" width="200px" height="200px" />
                         </div>
                     </li>
                     {{/each}}
