Issue #121: Edge expects the height of the SVG's otherwise it will not render

--- a/content/visie.html
+++ b/content/visie.html
@@ -18,7 +18,7 @@ nextPage:
         <div class="container">
             <div class="media-block">
                 <div class="media-block__image-wrapper">
-                    {{> diamond-icon svg="/images/crosshair.svg" inlineStyle="width: 60px; margin-left:-30px; margin-top: -30px" }}
+                    {{> diamond-icon svg="/images/crosshair.svg" inlineStyle="width: 60px; height: 60px; margin-left:-30px; margin-top: -30px" }}
                 </div>
 
                 <div class="media-block__content">
@@ -44,7 +44,7 @@ nextPage:
                     </p>
                 </div>
                 <div class="media-block__image-wrapper">
-                    {{> diamond-icon svg="/images/graduation-hat.svg" inlineStyle="width: 70px; margin-left:-35px; margin-top: -20px" }}
+                    {{> diamond-icon svg="/images/graduation-hat.svg" inlineStyle="width: 70px;  height: 40px; margin-left:-35px; margin-top: -20px" }}
                 </div>
             </div>
         </div>
@@ -54,7 +54,7 @@ nextPage:
         <div class="container">
             <div class="media-block">
                 <div class="media-block__image-wrapper">
-                    {{> diamond-icon svg="/images/fist.svg" inlineStyle="width: 50px; margin-left:-25px; margin-top: -25px" }}
+                    {{> diamond-icon svg="/images/fist.svg" inlineStyle="width: 50px;  height: 50px; margin-left:-25px; margin-top: -25px" }}
                 </div>
                 <div class="media-block__content">
                     <h2 class="cz-no-m-b">Team</h2>
