--- a/content/werken-bij.html
+++ b/content/werken-bij.html
@@ -43,7 +43,7 @@ nextPage:
                 </p>
             </div>
             <div class="media-block__image-wrapper">
-                {{> diamond-icon svg="/images/magnet.svg" inlineStyle="width: 60px; margin-left:-30px; margin-top: -30px" }}
+                {{> diamond-icon svg="/images/magnet.svg" inlineStyle="width: 60px; height: 60px; margin-left:-30px; margin-top: -30px" }}
             </div>
         </div>
     </div>
