feature(seo): add page descriptions

--- a/content/team.html
+++ b/content/team.html
@@ -1,5 +1,6 @@
 ---
 title: Ons team - CODEZILLA
+description: CODEZILLA bestaat uit een team van front end professionals die op het hoogste niveau met hun vak bezig zijn.
 layout: layout.html
 model:
     team: team
