--- a/content/visie.html
+++ b/content/visie.html
@@ -1,5 +1,6 @@
 ---
-title: Visie - CODEZILLA
+title: Onze Visie - CODEZILLA
+description: Wij streven naar langdurende en vruchtbare relaties door voorop te lopen in front end techniek en door ons uitstekende netwerk van collega-bedrijven, partners, intermediairs en vooral onze professionals op een passende manier in te zetten.
 layout: layout.html
 
 header:
