--- a/content/werken-bij.html
+++ b/content/werken-bij.html
@@ -1,5 +1,6 @@
 ---
-title: Werken bij - CODEZILLA
+title: Werken bij CODEZILLA - CODEZILLA
+description: Wij zijn op zoek naar gepassioneerde front end developers. Geïnteresseerd? Bel of mail ons op 020 - 3120 458 of martin@codezilla.nl 
 layout: layout.html
 
 header:
