feature(team): replace team photo

--- a/content/team.html
+++ b/content/team.html
@@ -8,7 +8,7 @@ model:
 header:
     image: /images/header-image-team.jpg
     title: Het team
-    slogan: We hebben passie voor code en zijn meer dan alleen werken
+    slogan: We hebben passie voor code, maar doen meer dan alleen werken
 
 nextPage:
     title: home
