feature(work-at): rewrite copy and add FE dev vacancy

--- a/content/werken-bij.html
+++ b/content/werken-bij.html
@@ -1,12 +1,12 @@
 ---
 title: Werken bij CODEZILLA - CODEZILLA
-description: Wij zijn op zoek naar gepassioneerde front end developers. Geïnteresseerd? Bel of mail ons op 020 - 3120 458 of martin@codezilla.nl 
+description: Wij zijn op zoek naar gepassioneerde front end experts.
 layout: layout.html
 
 header:
     image: /images/collage-codezilla-1.jpg
     title: Werken bij
-    slogan: Wij zijn op zoek naar gepassioneerde front end developers.
+    slogan: Wij zijn op zoek naar gepassioneerde front end experts.
 
 nextPage:
     title: team
@@ -23,10 +23,14 @@ nextPage:
             </div>
 
             <div class="media-block__content">
-                <h2 class="cz-no-m-b">Passie</h2>
+                <h2 class="cz-no-m-b">Werken bij CODEZILLA</h2>
                 <hr class="cz-divider" />
                 <p class="cz-text">
-                    We willen gepassioneerde, goed communicerende, front end professionals aan ons binden en boeien. We creëren een overzichtelijke, persoonlijke, flexibele organisatie met een nuchtere instelling. We stimuleren actieve interactie tussen onze vakmensen en partners, vakgenoten en klanten.
+                    Werken aan uitdagende projecten, bij toffe klanten, en met de laatste libraries en frameworks? 
+                    Omringd zijn met een groep enthousiaste, leuke en vriendelijke collega's, die ook nog eens allemaal front end experts zijn? 
+                    Jezelf ontwikkelen op een technisch en persoonlijk vlak?
+                    Dat is precies wat wij dagelijks doen bij CODEZILLA.
+
                 </p>
             </div>
         </div>
@@ -37,11 +41,12 @@ nextPage:
     <div class="container">
         <div class="media-block">
             <div class="media-block__content">
-                <h2 class="cz-no-m-b">Aantrekkingskracht</h2>
+                <h2 class="cz-no-m-b">Wij zoeken front end developers</h2>
                 <hr class="cz-divider"></hr>
                 <p class="cz-text">
-                    We willen energieke mensen aantrekken, die ambitieus zijn om samen met het team successen te behalen. Onze extra toegevoegde waarde; versnellen van persoonlijke ontwikkeling door elkaar te willen verbeteren (constructief, kennisdeling).
+                    Klinkt onze werkwijze en filosofie interessant? Heb je ruime ervaring als front end developer? Bekijk dan snel onze vacature.
                 </p>
+                <a href="/front-end-developer">Vacature Front End Developer</button>
             </div>
             <div class="media-block__image-wrapper">
                 {{> diamond-icon svg="/images/magnet.svg" inlineStyle="width: 60px; height: 60px; margin-left:-30px; margin-top: -30px" }}
