feature(recruitment): add contact info

--- a/content/front-end-developer.html
+++ b/content/front-end-developer.html
@@ -37,7 +37,7 @@ nextPage:
                 <p class="cz-text">
                     CODEZILLA bestaat uit een groep enthousiaste, vriendelijke en ervaren front end developers. Wij werken samen met onze opdrachtgevers aan projecten waar wij onze kennis en ervaring gebruiken om complexe (mobiele) web applicaties te bouwen en te verbeteren.
                 </p>
-                <h3 class="cz-no-m-b">Wat wij jou bieden</h3>
+                <h3 class="cz-no-m-b">Wat wij jou bieden</h2>
                 <p class="cz-text">
                     Wij vinden het belangrijk om te werken aan jouw ontwikkeling; dat doen we met onze kennissessies, meetups, conferenties, hackathons en ook persoonlijke begeleiding. Daarnaast vinden wij plezier in het werk essentieel; dat betekent een opdracht die bij jou past en ook naast het werk samen leuke dingen doen.
                 </p>
@@ -55,6 +55,10 @@ nextPage:
                     <li class="cz-text">En natuurlijk een goed salaris dat past bij jouw kennis, kunde en ervaring</li>
                     <li class="cz-text">Dit is echter nog niet alles; graag vertellen we je meer in een kennismakingsgesprek!</li>
                 </ul>
+                <h3 class="cz-no-m-b">Hoe je met ons in contact komt</h3>
+                <p class="cz-text">
+                    Stuur een mailtje naar <a href="mailto:info@codezilla.nl">info@codezilla.nl</a> met informatie over jezelf (CV, Github link, etc), dan hoor je snel van ons!
+                </p>
             </div>
         </div>
     </div>
