feature(team): remove multiple teams

--- a/content/team.html
+++ b/content/team.html
@@ -40,4 +40,4 @@ nextPage:
     {{/each}}
 </div>
 </main>
-<div class="tortured-border tortured-border--bottom-green"></div>
+<div class="tortured-border tortured-border--bottom"></div>
